--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,5 +1,3 @@
-<%= title "All Jobs" %>
-
 <%= render 'partials/alerts' %>
 
 <!-- 'access_level' must be set to 1 or 2 to view this page -->
@@ -11,13 +9,11 @@
           <h2 class="page-header">Manage Jobs <%= link_to 'Create New',  new_job_path, class:'btn btn-success pull-right'%></h2> 
         </div><!-- end .page-sub-title -->
       </div><!-- end .col-md-12 col-sm-12 col-xs-12 -->
-      <% if @users.exists? %>
+      <% if @jobs.exists? %>
             <table class="table table-striped">
                 <tr>
                   <th>Title</th>
-                  <th>Description</th>
                   <th>Salary</th>
-                  <th>Notes</th>
                   <th>Create Date </th>
                   <th>Edit</th>
                   <th>Delete</th>
@@ -26,9 +22,9 @@
                 <tr>
                     <td><%= job.title %></td>
                     <td><%= job.salary %></td>
-                    <td><%= user.created_at.to_time.strftime('%B %e at %l:%M %p' ) %></td>
-                   <td><%= link_to 'Edit', edit_job_path(user), class: 'btn btn-primary' %></td>
-                   <td><%= link_to 'Delete', job_path(user), class: 'btn btn-danger', method: :delete, data: { confirm: "Are you sure?" } %></td>
+                    <td><%= job.created_at.to_time.strftime('%B %e at %l:%M %p' ) %></td>
+                   <td><%= link_to 'Edit', edit_job_path(job), class: 'btn btn-primary' %></td>
+                   <td><%= link_to 'Delete', job_path(job), class: 'btn btn-danger', method: :delete, data: { confirm: "Are you sure?" } %></td>
                 </tr>
             <% end %>
             </table>
