Updated views to be more user friendly

--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,19 +1,21 @@
 <%= render 'partials/alerts' %>
 
-<!-- 'access_level' must be set to 1 or 2 to view this page -->
 <section class="main-content">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-6 col-sm-6 col-xs-6">
+            <%= render 'form' %>
+        </div>
+     <div class="col-md-6 col-sm-6 col-xs-6">
         <div class="page-sub-title textcenter">
           <h2 class="page-header">Manage Candidates <%= link_to 'Create New',  new_candidate_path, class:'btn btn-success pull-right'%></h2> 
         </div><!-- end .page-sub-title -->
-      </div><!-- end .col-md-12 col-sm-12 col-xs-12 -->
       <% if @candidates.exists? %>
             <table class="table table-striped">
                 <tr>
                   <th>Name</th>
                   <th>Email</th>
+                  <th>Status</th>
                   <th>Create Date </th>
                   <th>Edit</th>
                   <th>Delete</th>
@@ -22,6 +24,7 @@
                 <tr>
                     <td><%= candidate.name %></td>
                     <td><%= candidate.email %></td>
+                    <td><%= candidate.status %></td>
                     <td><%= candidate.created_at.to_time.strftime('%B %e at %l:%M %p' ) %></td>
                    <td><%= link_to 'Edit', edit_candidate_path(candidate), class: 'btn btn-primary' %></td>
                    <td><%= link_to 'Delete', candidate_path(candidate), class: 'btn btn-danger', method: :delete, data: { confirm: "Are you sure?" } %></td>
@@ -34,6 +37,7 @@
             <% end %>
         </div>
       </div>
-    </div>
-  </div>
+      </div><!-- end .col-md-6 col-sm-6 col-xs-6 -->
+  </div><!-- Closes row -->
+</div><!-- Closes container -->
 </section>
