--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -9,13 +9,16 @@
     <div class="form-group">
         <%= f.telephone_field :phone, class: 'form-control', placeholder: 'Telephone Number' %>
     </div>
-     <div class="form-group">
-        <%= f.select :company_id, Company.all.collect {|x| [x.name, x.id]}, {include_blank: 'Select Company'}, class:'form-control' %><br />
+    <div class="form-group">
+        <%= f.select :status, options_for_select([['Needs Approval', 'needs_approval'], ['Needs Feedback', 'needs_feedback'], ['Needs Interview', 'needs_interview'], ['Final Stages', 'final_stages']]) ,{include_blank: 'Select Status (not required)'}, class: 'form-control' %>
+    </div>
+    <div class="form-group">
+        <%= f.select :jobs, Job.all.collect {|x| [x.title, x.id]}, {include_blank: 'Select Job (not required)'}, class:'form-control' %><br />
     </div>
     <%= f.button :submit, class:'button button-default', 'data-text': 'SUBMIT' do %>
         <span>SUBMIT</span>
     <% end %>
     <!-- <div class="col-xs-12 col-sm-6 format-padding-left">
-      <%=link_to 'Cancel', candidates_path, class:'btn btn-lg gray-color' %>
-  </div> -->
-  <% end %>
+        <%=link_to 'Cancel', candidates_path, class:'btn btn-lg gray-color' %>
+    </div> -->
+<% end %>
