--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -10,6 +10,19 @@
         <%= f.telephone_field :phone, class: 'form-control', placeholder: 'Telephone Number' %>
     </div>
     <div class="form-group">
+        <%= f.text_field :about, class: 'form-control', placeholder: 'About Me' %>
+    </div>
+    <div class="form-group">
+        <%= f.url_field :linkedin_link, class: 'form-control', placeholder: 'LinkedIn URL' %>
+    </div>
+    <div class="form-group">
+        <%= f.url_field :facebook_link, class: 'form-control', placeholder: 'Website URL' %>
+    </div>
+    <div class="form-group">
+        <%= f.label :image %>
+        <%= f.file_field :image, class: 'form-control'%>
+    </div>
+    <div class="form-group">
         <%= f.select :status, options_for_select([['Needs Approval', 'needs_approval'], ['Needs Feedback', 'needs_feedback'], ['Needs Interview', 'needs_interview'], ['Final Stages', 'final_stages']]) ,{include_blank: 'Select Status'}, class: 'form-control' %>
     </div>
     <div class="form-group">
