--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -3,11 +3,8 @@
     <div class="form-group">
         <%= f.text_field :name, class: 'form-control', placeholder: 'Name' %>
     </div>
-    <div class="form-group">
-        <%= f.text_field :city, class: 'form-control', placeholder: 'City' %>
-    </div>
-    <div class="form-group">
-        <%= f.text_area :notes, class: 'form-control', placeholder: 'Notes' %>
+     <div class="form-group">
+        <%= f.select :locations, Location.all.collect {|x| [x.city, x.id]}, {include_blank: 'Select Location'}, class:'form-control' %><br />
     </div>
     <%= f.button :submit, class:'button button-default', 'data-text': 'SUBMIT' do %>
         <span>SUBMIT</span>
