--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,16 +1,25 @@
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.wysihtml5').each(function(i, elem) {
+      $(elem).wysihtml5();
+    });
+  })
+$(document).on('page:load', function(){
+  window['rangy'].initialized = false
+})
+</script>
+
 <%= form_for([@user, @job], html: {class: "comment-form"}) do |f| %>
     <%= render 'form_error', resource: f.object %>
     <div class="form-group">
         <%= f.text_field :title, class: 'form-control', placeholder: 'Title' %>
     </div>
     <div class="form-group">
-        <%= f.text_area :description, class: 'form-control', placeholder: 'Description' %>
+        <%= f.text_area :description, class: 'wysihtml5 form-control', placeholder: 'Description' %>
     </div>
     <div class="form-group">
         <%= f.number_field :salary, class: 'form-control', placeholder: 'Salary' %>
-    </div>
-    <div class="form-group">
-        <%= f.text_area :notes, class: 'form-control', placeholder: 'Notes' %>
     </div>
      <div class="form-group">
         <%= f.select :company_id, Company.all.collect {|x| [x.name, x.id]}, {include_blank: 'Select Company'}, class:'form-control' %><br />
